src/objects/Drop_in__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Drop_In__c</fullName>
        <label>Drop-In</label>
        <picklist>
            <picklistValues>
                <fullName>Monday Social</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Speaker__c</fullName>
        <label>Speaker</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Video__c</fullName>
        <label>Video</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>What_Happened__c</fullName>
        <label>What Happened</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Drop-in</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Speaker__c</columns>
        <columns>What_Happened__c</columns>
        <columns>Video__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Tuesday_am_this_month</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>What_Happened__c</columns>
        <columns>Speaker__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>Drop_In__c</field>
            <operation>equals</operation>
            <value>Tuesday AM</value>
        </filters>
        <label>Tuesday am this month</label>
    </listViews>
    <listViews>
        <fullName>Tuesday_pm_this_month</fullName>
        <columns>NAME</columns>
        <columns>Speaker__c</columns>
        <columns>What_Happened__c</columns>
        <columns>Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>Drop_In__c</field>
            <operation>equals</operation>
            <value>Tuesday PM</value>
        </filters>
        <label>Tuesday pm this month</label>
    </listViews>
    <nameField>
        <label>Drop-in Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Drop-in</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>